[package]
name = "personal_finance_ledger"
version = "0.2.0"
edition = "2021"

[lib]
name = "personal_finance_ledger"
path = "src/lib.rs"

[[bin]]
name = "ft"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
directories = "5"
tempfile = "3"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
rpassword = "7"
zeroize = "1"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
